# cmake_boilerplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Version.in
HelloWorld/: CMakeLists.txt  HelloWorld.cpp  main.cpp
Message/: CMakeLists.txt  Message.cpp  Message.h  Message_tests.cpp
Rust/: CMakeLists.txt
Rust/hello_from_rust/: CMakeLists.txt  Cargo.toml
Rust/hello_from_rust/src/: lib.rs
Rust/rust-lib/: CMakeLists.txt  Cargo.toml
Rust/rust-lib/src/: lib.rs
Widget/: CMakeLists.txt  Gadget.cpp  Gadget.h  Gadget_tests.cpp  Widget.cpp  Widget.h  Widget_tests.cpp
cmake/: CompilerWarnings.cmake
